<resources>
    <string name="app_name">App Nau An</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">App Nấu Ăn</string>
    <string name="nav_header_subtitle">NauAn_App@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dsmonan">Danh sách món ăn</string>
    <string name="menu_monanyeuthich">Món ăn yêu thích</string>
    <string name="menu_monancuatoi">Món ăn của tôi</string>
    <string name="menu_dangnhap">Tài khoản</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_quanly">Quản lý</string>
    <string name="signup">Đăng ký</string>
    <string name="image">Hình ảnh</string>
    <string name="password">Mật khẩu</string>
    <string name="username">Tên đăng nhập</string>

</resources>
