<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dsmonan"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dsmonan" />
        <item
            android:id="@+id/nav_monanyeuthich"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_monanyeuthich" />
        <item
            android:id="@+id/nav_monancuatoi"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_monancuatoi" />
        <item
            android:id="@+id/nav_dangnhap"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_dangnhap" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_quanly"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_quanly" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
