<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mochi2"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign in"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textAlignment="center"
        android:background="@color/green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:id="@+id/tvSignup"
        />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="name@gmail.com"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:background="#FFEC8B"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/tvSignup" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="*******"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:background="#FFEC8B"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/tv_password"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/username"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignup" />



    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <Button
        android:id="@+id/buttonSingIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:text="Sign in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        android:background="@color/green"
        android:textSize="20dp"
        android:textColor="#ffffff"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/btn_sign_up"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_in_facebook"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_marginBottom="5dp"
        android:background="@color/green"
        android:textSize="20dp"
        android:textColor="#ffffff"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign in via facebook"
        android:id="@+id/btn_sign_in_facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_sign_up"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:background="@color/green"
        />



</androidx.constraintlayout.widget.ConstraintLayout>